# example-aws-lambda-e2e-test-on-gha

./: README.md  compose.yaml  pyproject.toml
.github/workflows/: test.yaml
docker/app/: Dockerfile
docker/test/: Dockerfile
src/example_aws_lambda_e2e_test_on_gha/: __init__.py  app.py
tests/: test_app.py
