[project]
name = "example-aws-lambda-e2e-test-on-gha"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "daikichiba9511", email = "daikichiba.tech.ml@gmail.com" }
]
dependencies = [
    "aws-lambda-powertools[all]>=2.42.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "requests>=2.32.3",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/example_aws_lambda_e2e_test_on_gha"]
